--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -187,7 +187,7 @@ label.ncourses                    = N\u00BA enrolled courses
 label.never                       = No disponible
 label.of                          = de
 label.oldPassword                 = Contrasenya antiga:
-label.parselog                    = S'est\u00E0 actualitzant el registre... (This process may take some time)
+label.parselog                    = Parsing logs...
 label.participants                = Participants
 label.pass                        = Contrasenya:
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
