--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -187,7 +187,7 @@ label.ncourses                    = N\u00BA enrolled courses
 label.never                       = Nicht verf\u00FCgbar
 label.of                          = von
 label.oldPassword                 = Altes Passwort:
-label.parselog                    = Protokoll wird aktualisiert ... (This process may take some time)
+label.parselog                    = Parsing logs...
 label.participants                = Teilnehmer
 label.pass                        = Passwort:
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
