--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -187,7 +187,7 @@ label.ncourses                    = N\u00BA enrolled courses
 label.never                       = Not available
 label.of                          = of
 label.oldPassword                 = Old Password: 
-label.parselog                    = Downloading logs... (This process may take some time)
+label.parselog                    = Parsing logs...
 label.participants                = Participants
 label.pass                        = Password:
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
