--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -165,7 +165,7 @@ label.componentorevent            = Componente\nEvento:
 label.course                      = Curso: 
 label.coursemodule                = M\u00F3dulos:
 label.courses                     = Cursos matriculados
-label.downloadinglog              = Descargando log... (Este proceso puede tardar cierto tiempo)
+label.downloadinglog              = Descargando registros... (Este proceso puede tardar cierto tiempo)
 label.email                       = Correo electr\u00F3nico
 label.enddate                     = Fecha de referencia final: 
 label.event                       = Evento:
@@ -187,7 +187,7 @@ label.ncourses                    = N\u00BA Cursos matriculados
 label.never                       = No disponible
 label.of                          = de
 label.oldPassword                 = Contrase\u00F1a antigua: 
-label.parselog                    = Descargando los registros... (Este proceso puede tardar cierto tiempo)
+label.parselog                    = Parseando los registros...
 label.participants                = Participantes
 label.pass                        = Contrase\u00F1a:
 label.relogin                     = Fallo al descargar los registros. Intentando iniciar sesion de nuevo y volver a descargar.
