--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -187,7 +187,7 @@ label.ncourses                    = N\u00BA enrolled courses
 label.never                       = Indisponible
 label.of                          = de
 label.oldPassword                 = Ancien mot de passe:
-label.parselog                    = Mise \u00E0 jour du journal ... (This process may take some time)
+label.parselog                    = Parsing logs...
 label.participants                = Participants
 label.pass                        = Mot de passe:
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
