--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -187,7 +187,7 @@ label.ncourses                    = N\u00BA enrolled courses
 label.never                       = Non disponibile
 label.of                          = di
 label.oldPassword                 = Vecchia password:
-label.parselog                    = Aggiornamento del registro ... (This process may take some time) (This process may take some time)
+label.parselog                    = Parsing logs...
 label.participants                = partecipanti
 label.pass                        = La password:
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
