--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -187,7 +187,7 @@ label.ncourses                    = N\u00BA enrolled courses
 label.never                       = N\u00E3o dispon\u00EDvel
 label.of                          = do
 label.oldPassword                 = Senha Antiga:
-label.parselog                    = Atualizando log ... (This process may take some time)
+label.parselog                    = Parsing logs...
 label.participants                = Participantes
 label.pass                        = Senha:
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
