--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -251,6 +251,7 @@ log.component.statistics                                        = Kursstatistike
 log.component.submission_comments                               = Abgabekommentare
 log.component.survey                                            = Umfrage
 log.component.system                                            = Kernsystem
+log.component.tab_display                                       = Tab display
 log.component.url                                               = Link/URL
 log.component.user_report                                       = Teilnehmer\u00FCbersicht
 log.component.user_tours                                        = Gef\u00FChrte Touren
@@ -757,6 +758,7 @@ text.selectedUsers      = Selected Users
 text.stats              = Kursstatistiken
 text.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
 text.thankstitle        = Acknowledgments:
+text.total              = Total
 
 thirdInterval = Terz
 
