--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -251,6 +251,7 @@ log.component.statistics                                        = Statistics
 log.component.submission_comments                               = Submission comments
 log.component.survey                                            = Survey
 log.component.system                                            = System
+log.component.tab_display                                       = Tab display
 log.component.url                                               = URL
 log.component.user_report                                       = User report
 log.component.user_tours                                        = User tours
@@ -757,6 +758,7 @@ text.selectedUsers      = Selected Users
 text.stats              = Statistics
 text.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
 text.thankstitle        = Acknowledgments:
+text.total              = Total
 
 thirdInterval = Third interval
 
