--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -251,6 +251,7 @@ log.component.statistics                                        = Estad\u00EDsti
 log.component.submission_comments                               = Comentarios de la entrega
 log.component.survey                                            = Encuesta predefinida
 log.component.system                                            = Sistema
+log.component.tab_display                                       = Visualizaci\u00F3n de pesta\u00F1a
 log.component.url                                               = URL
 log.component.user_report                                       = Usuario
 log.component.user_tours                                        = Tours para usuarios
@@ -757,6 +758,7 @@ text.selectedUsers      = Usuarios Seleccionados
 text.stats              = Estad\u00EDsticas
 text.thanks             = Este trabajo ha sido posible gracias a las ayudas concedidas  por  la  Consejer\u00EDa  de  Educaci\u00F3n  de  la  Junta de Castilla y Le\u00F3n a la Universidad de Burgos (OL-2018-01) para el apoyo al desarrollo de la formaci\u00F3n on-line cofinanciadas por el Fondo Europeo de Desarrollo Regional (FEDER).
 text.thankstitle        = Agradecimientos:
+text.total              = Total
 
 thirdInterval = Tercer intervalo
 
