--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -251,6 +251,7 @@ log.component.statistics                                        = Statistiques
 log.component.submission_comments                               = Commentaires
 log.component.survey                                            = Consultation
 log.component.system                                            = Syst\u00E8me
+log.component.tab_display                                       = Tab display
 log.component.url                                               = URL
 log.component.user_report                                       = Rapport du participant
 log.component.user_tours                                        = Visites guid\u00E9es
@@ -757,6 +758,7 @@ text.selectedUsers      = Selected Users
 text.stats              = Statistiques
 text.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
 text.thankstitle        = Acknowledgments:
+text.total              = Total
 
 thirdInterval = Troisi\u00E8me intervalle
 
