--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -251,6 +251,7 @@ log.component.statistics                                        = Estat\u00EDsti
 log.component.submission_comments                               = Coment\u00E1rios \u00E0 submiss\u00E3o
 log.component.survey                                            = Inqu\u00E9rito predefinido
 log.component.system                                            = Sistema
+log.component.tab_display                                       = Tab display
 log.component.url                                               = URL
 log.component.user_report                                       = Pauta do aluno
 log.component.user_tours                                        = Demonstra\u00E7\u00F5es ao utilizador
@@ -757,6 +758,7 @@ text.selectedUsers      = Selected Users
 text.stats              = Estat\u00EDsticas
 text.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
 text.thankstitle        = Acknowledgments:
+text.total              = Total
 
 thirdInterval = terceiro intervalo
 
