Remove moodle user in database

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -38,10 +38,16 @@ MEAN_DIFF.yAxisTitle = Registres
 
 RADAR = Radar
 
+SCATTER = Dispersion
+
 STACKED_BAR = Barres Apilades
 
 STACKED_BAR.xAxisTitle = {0}
 STACKED_BAR.yAxisTitle = Registres
+
+TOTAL_BAR = Total
+
+TOTAL_BAR.yAxisTitle = Registres
 
 VIOLIN = Violin
 
