--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -38,10 +38,16 @@ MEAN_DIFF.yAxisTitle = Registros
 
 RADAR = Radar
 
+SCATTER = Dispersi\u00F3n
+
 STACKED_BAR = Barras Apiladas
 
 STACKED_BAR.xAxisTitle = {0}
 STACKED_BAR.yAxisTitle = Registros
+
+TOTAL_BAR = Total
+
+TOTAL_BAR.yAxisTitle = Registros
 
 VIOLIN = Violin
 
