--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -38,10 +38,16 @@ MEAN_DIFF.yAxisTitle = Journaux
 
 RADAR = Radar
 
+SCATTER = Dispersion
+
 STACKED_BAR = Bar Empil\u00E9e
 
 STACKED_BAR.xAxisTitle = {0}
 STACKED_BAR.yAxisTitle = Journaux
+
+TOTAL_BAR = Total
+
+TOTAL_BAR.yAxisTitle = Journaux
 
 VIOLIN = Violin
 
