--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -38,10 +38,16 @@ MEAN_DIFF.yAxisTitle = Logs
 
 RADAR = Radar
 
+SCATTER = Dispersion
+
 STACKED_BAR = A Barre In Pila
 
 STACKED_BAR.xAxisTitle = {0}
 STACKED_BAR.yAxisTitle = Logs
+
+TOTAL_BAR = Total
+
+TOTAL_BAR.yAxisTitle = Logs
 
 VIOLIN = Violin
 
