--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -38,10 +38,16 @@ MEAN_DIFF.yAxisTitle = Hist\u00F3rico
 
 RADAR = Radar
 
+SCATTER = Dispersion
+
 STACKED_BAR = Bar Empilhados
 
 STACKED_BAR.xAxisTitle = {0}
 STACKED_BAR.yAxisTitle = Hist\u00F3rico
+
+TOTAL_BAR = Total
+
+TOTAL_BAR.yAxisTitle = Hist\u00F3rico
 
 VIOLIN = Violin
 
