--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -79,6 +79,8 @@ button.save    = Save
 
 calculateMax = calcular m\u00E0xim
 
+charset = File charset
+
 chart.mean                = Significar
 
 chartlabel.atypicalValue  = Valor at\u00EDpic
@@ -123,6 +125,7 @@ error.fields              = Heu de completar tots els camps.
 error.generateCharts      = No es poden generar gr\u00E0fics.
 error.generatedataset     = S'ha produ\u00EFt un error en construir el conjunt de dades.
 error.host                = No es pot connectar amb l'amfitri\u00F3.
+error.invalidcache        = Incompatible cache of old version of the application, clean the cache and download again. 
 error.login               = Nom d'usuari o contrasenya incorrectes.
 error.malformedurl        = URL mal format. Heu afegit el protocol http (s)?
 error.nocacheavaible      = Sense mem\u00F2ria cau es troba per a aquest usuari i de sistema principal
@@ -736,9 +739,9 @@ text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.days               = Dies
 text.empty              = N.A
-text.exportcsv          = Export CSV
-text.exportcsvdesglosed = Export breakdown CSV
-text.exportpng          = Export PNG
+text.exportcsv          = Export CSV...
+text.exportcsvdesglosed = Export breakdown CSV...
+text.exportpng          = Export PNG...
 text.fail               = Fail
 text.favorite           = Destacats
 text.future             = Future
