--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -79,6 +79,8 @@ button.save    = Save
 
 calculateMax = berechnen Sie max
 
+charset = File charset
+
 chart.mean                = Bedeuten
 
 chartlabel.atypicalValue  = Atypischer Wert
@@ -123,6 +125,7 @@ error.fields              = Sie m\u00FCssen alle Felder ausf\u00FCllen.
 error.generateCharts      = Diagramme k\u00F6nnen nicht generiert werden.
 error.generatedataset     = Fehler beim Erstellen des Datasets.
 error.host                = Verbindung zum Host nicht m\u00F6glich.
+error.invalidcache        = Incompatible cache of old version of the application, clean the cache and download again. 
 error.login               = Benutzername oder Passwort falsch.
 error.malformedurl        = Schlecht geformte URL. Haben Sie http (s) -Protokoll hinzugef\u00FCgt?
 error.nocacheavaible      = Kein Cache f\u00FCr diesen Benutzer und Host gefunden
@@ -736,9 +739,9 @@ text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.days               = Tage
 text.empty              = N.A
-text.exportcsv          = Export CSV
-text.exportcsvdesglosed = Export breakdown CSV
-text.exportpng          = Export PNG
+text.exportcsv          = Export CSV...
+text.exportcsvdesglosed = Export breakdown CSV...
+text.exportpng          = Export PNG...
 text.fail               = Fail
 text.favorite           = Als Favorit markiert
 text.future             = Future
