--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -79,6 +79,8 @@ button.save    = Guardar
 
 calculateMax = Calcular m\u00E1ximo
 
+charset = Codificaci\u00F3n de fichero
+
 chart.mean                = Media
 
 chartlabel.atypicalValue  = Valor Atipico
@@ -123,6 +125,7 @@ error.fields              = Debes completar todos los campos.
 error.generateCharts      = No se han podido generar los gr\u00E1ficos.
 error.generatedataset     = Error en la construcci\u00F3n del dataset.
 error.host                = No se ha podido conectar con el host.
+error.invalidcache        = Cach\u00E9 incompatible de versi\u00F3n antigua de la aplicaci\u00F3n, limpia la cach\u00E9 y vuelva descargar.
 error.login               = Usuario y/o contrase\u00F1a incorrectos.
 error.malformedurl        = URL mal formada. \u00BFHas a\u00F1adido protocolo http(s)?
 error.nocacheavaible      = No se encunetra cach\u00E9 para este usuario y host
@@ -736,9 +739,9 @@ text.confirmation       = Confirmaci\u00F3n
 text.confirmationtext   = \u00BFEstas seguro de borrar la cach\u00E9 del curso seleccionado?
 text.days               = d\u00EDas
 text.empty              = S.C
-text.exportcsv          = Exportar CSV
-text.exportcsvdesglosed = Exportar CSV desglosado
-text.exportpng          = Exportar PNG
+text.exportcsv          = Exportar CSV...
+text.exportcsvdesglosed = Exportar CSV desglosado...
+text.exportpng          = Exportar PNG...
 text.fail               = Suspenso
 text.favorite           = Destacados
 text.future             = Futuros
