--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -79,6 +79,8 @@ button.save    = Save
 
 calculateMax = Calculer max
 
+charset = File charset
+
 chart.mean                = Signifier
 
 chartlabel.atypicalValue  = Valeur atypique
@@ -123,6 +125,7 @@ error.fields              = Vous devez remplir tous les champs.
 error.generateCharts      = Impossible de g\u00E9n\u00E9rer des graphiques.
 error.generatedataset     = Erreur lors de la construction du jeu de donn\u00E9es.
 error.host                = Impossible de se connecter avec l'h\u00F4te.
+error.invalidcache        = Incompatible cache of old version of the application, clean the cache and download again. 
 error.login               = Mauvais nom d'utilisateur ou mot de passe.
 error.malformedurl        = URL mal form\u00E9e. Avez-vous ajout\u00E9 le protocole http (s)?
 error.nocacheavaible      = Aucun cache est trouv\u00E9 pour cet utilisateur et l'h\u00F4te
@@ -736,9 +739,9 @@ text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.days               = Journ\u00E9es
 text.empty              = N.A
-text.exportcsv          = Export CSV
-text.exportcsvdesglosed = Export breakdown CSV
-text.exportpng          = Export PNG
+text.exportcsv          = Export CSV...
+text.exportcsvdesglosed = Export breakdown CSV...
+text.exportpng          = Export PNG...
 text.fail               = Fail
 text.favorite           = Favoris\r\n
 text.future             = Future
