--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -79,6 +79,8 @@ button.save    = Save
 
 calculateMax = Calcolare max
 
+charset = File charset
+
 chart.mean                = Significare
 
 chartlabel.atypicalValue  = Valore atipico
@@ -123,6 +125,7 @@ error.fields              = Devi completare tutti i campi.
 error.generateCharts      = Non posso generare grafici.
 error.generatedataset     = Errore durante la creazione del set di dati.
 error.host                = Impossibile connettersi con l'host.
+error.invalidcache        = Incompatible cache of old version of the application, clean the cache and download again. 
 error.login               = Username o password errati.
 error.malformedurl        = URL mal formato. Hai aggiunto il protocollo http (s)?
 error.nocacheavaible      = Nessun cache \u00E8 trovato per questo utente e di accoglienza
@@ -736,9 +739,9 @@ text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.days               = giorni
 text.empty              = N.A
-text.exportcsv          = Export CSV
-text.exportcsvdesglosed = Export breakdown CSV
-text.exportpng          = Export PNG
+text.exportcsv          = Export CSV...
+text.exportcsvdesglosed = Export breakdown CSV...
+text.exportpng          = Export PNG...
 text.fail               = Fail
 text.favorite           = Preferiti
 text.future             = Future
