--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -79,6 +79,8 @@ button.save    = Save
 
 calculateMax = Calcular max
 
+charset = File charset
+
 chart.mean                = Significar
 
 chartlabel.atypicalValue  = Valor at\u00EDpico
@@ -123,6 +125,7 @@ error.fields              = Voc\u00EA tem que completar todos os campos.
 error.generateCharts      = N\u00E3o \u00E9 poss\u00EDvel gerar gr\u00E1ficos.
 error.generatedataset     = Erro ao construir o conjunto de dados.
 error.host                = N\u00E3o \u00E9 poss\u00EDvel conectar-se ao host.
+error.invalidcache        = Incompatible cache of old version of the application, clean the cache and download again. 
 error.login               = Nome de usu\u00E1rio ou senha incorretos.
 error.malformedurl        = URL mal formado. Voc\u00EA adicionou o protocolo http (s)?
 error.nocacheavaible      = Sem cache \u00E9 encontrado para este usu\u00E1rio e hospedeiro
@@ -736,9 +739,9 @@ text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.days               = Dias
 text.empty              = N.A
-text.exportcsv          = Export CSV
-text.exportcsvdesglosed = Export breakdown CSV
-text.exportpng          = Export PNG
+text.exportcsv          = Export CSV...
+text.exportcsvdesglosed = Export breakdown CSV...
+text.exportpng          = Export PNG...
 text.fail               = Fail
 text.favorite           = Com estrela
 text.future             = Future
