--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -79,6 +79,8 @@ button.save    = Save
 
 calculateMax = Calculate max
 
+charset = File charset
+
 chart.mean                = Mean
 
 chartlabel.atypicalValue  = Atypical Value
@@ -123,6 +125,7 @@ error.fields              = You have to complete all the fields.
 error.generateCharts      = Can't generate charts.
 error.generatedataset     = Error building the dataset.
 error.host                = Can't connect with host.
+error.invalidcache        = Incompatible cache of old version of the application, clean the cache and download again. 
 error.login               = Wrong Username or password.
 error.malformedurl        = Badly formed URL. Did you add http(s) protocol?
 error.nocacheavaible      = No cache is found for this user and host
@@ -736,9 +739,9 @@ text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.days               = Days
 text.empty              = N.A
-text.exportcsv          = Export CSV
-text.exportcsvdesglosed = Export breakdown CSV
-text.exportpng          = Export PNG
+text.exportcsv          = Export CSV...
+text.exportcsvdesglosed = Export breakdown CSV...
+text.exportpng          = Export PNG...
 text.fail               = Fail
 text.favorite           = Starred
 text.future             = Future
