Refactorized CSV and added export for Total bar and scatter

--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -688,7 +688,10 @@ menu.tools          = Tools
 menu.update         = Update course
 menu.view           = View
 
-message.export_csv_success = CSV-Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis: 
+message.export_csv            = CSV-Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis: 
+message.export_csv_desglossed = CSV-Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis: 
+message.export_csv_success    = CSV-Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis: 
+message.export_png            = PNG-Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis: 
 
 module.assign      = Zuordnung
 module.book        = Buch
