--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -688,7 +688,10 @@ menu.tools          = _Tools
 menu.update         = _Update course
 menu.view           = _View
 
-message.export_csv_success = CSV export successfully. Review the files in the directory: 
+message.export_csv            = CSV export successfully. Review the filein the directory: 
+message.export_csv_desglossed = CSV breakdown export successfully. Review the filein the directory: 
+message.export_csv_success    = CSV export successfully. Review the files in the directory: 
+message.export_png            = PNG export successfully. Review the file in the directory: 
 
 module.assign      = Assignment
 module.book        = Book
