--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -688,7 +688,10 @@ menu.tools          = Tools
 menu.update         = Update course
 menu.view           = View
 
-message.export_csv_success = Esportazione CSV con successo. Esaminare i file nella directory: 
+message.export_csv            = Esportazione CSV con successo. Esaminare i file nella directory: 
+message.export_csv_desglossed = Esportazione CSV con successo. Esaminare i file nella directory: 
+message.export_csv_success    = Esportazione CSV con successo. Esaminare i file nella directory: 
+message.export_png            = Esportazione PNG con successo. Esaminare i file nella directory: 
 
 module.assign      = assegnazione
 module.book        = Libro
