--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -688,7 +688,10 @@ menu.tools          = Tools
 menu.update         = Update course
 menu.view           = View
 
-message.export_csv_success = Exporta\u00E7\u00E3o CSV com sucesso. Revise os arquivos no diret\u00F3rio: 
+message.export_csv            = Exporta\u00E7\u00E3o CSV com sucesso. Revise os arquivos no diret\u00F3rio: 
+message.export_csv_desglossed = Exporta\u00E7\u00E3o CSV com sucesso. Revise os arquivos no diret\u00F3rio: 
+message.export_csv_success    = Exporta\u00E7\u00E3o CSV com sucesso. Revise os arquivos no diret\u00F3rio: 
+message.export_png            = Exporta\u00E7\u00E3o PNG com sucesso. Revise os arquivos no diret\u00F3rio: 
 
 module.assign      = Tarefa
 module.book        = Livro
