--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -688,7 +688,10 @@ menu.tools          = Tools
 menu.update         = Update course
 menu.view           = View
 
-message.export_csv_success = Exportaci\u00F3 CSV amb \u00E8xit. Revisi els fitxers del directori: 
+message.export_csv            = Exportaci\u00F3 CSV amb \u00E8xit. Revisi el fitxer del directori: 
+message.export_csv_desglossed = Exportaci\u00F3 CSV amb \u00E8xit. Revisi el fitxer del directori: 
+message.export_csv_success    = Exportaci\u00F3 CSV amb \u00E8xit. Revisi els fitxers del directori: 
+message.export_png            = Exportaci\u00F3 PNG amb \u00E8xit. Revisi els fitxers del directori: 
 
 module.assign      = Assignaci\u00F3
 module.book        = Llibre
