--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -688,7 +688,10 @@ menu.tools          = _Herramientas
 menu.update         = Actua_lizar curso
 menu.view           = _Ver
 
-message.export_csv_success = Exportaci\u00F3n CSV con \u00E9xito. Revise los ficheros en el directorio: 
+message.export_csv            = Exportaci\u00F3n CSV con \u00E9xito. Revise el en el directorio: 
+message.export_csv_desglossed = Exportaci\u00F3n CSV desglosado con \u00E9xito. Revise el en el directorio: 
+message.export_csv_success    = Exportaci\u00F3n CSV con \u00E9xito. Revise los ficheros en el directorio: 
+message.export_png            = Exportaci\u00F3n PNG con \u00E9xito. Revise el fichero en el directorio: 
 
 module.assign      = Tarea
 module.book        = Libro
