--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -688,7 +688,10 @@ menu.tools          = Tools
 menu.update         = Update course
 menu.view           = View
 
-message.export_csv_success = Export CSV avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire: 
+message.export_csv            = Export CSV avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire: 
+message.export_csv_desglossed = Export CSV avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire: 
+message.export_csv_success    = Export CSV avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire: 
+message.export_png            = Export PNG avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire: 
 
 module.assign      = Affectation
 module.book        = Livre
