--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -38,7 +38,7 @@ MEAN_DIFF.yAxisTitle = Registres
 
 RADAR = Radar
 
-SCATTER = Dispersion
+SCATTER = Scatter
 
 STACKED_BAR = Barres Apilades
 
@@ -96,6 +96,7 @@ chartlabel.tableMean      = Significar
 chartlabel.thirdquartile  = Tercer quartil
 chartlabel.upperlimit     = L\u00EDmit superior
 
+checkbox.onlyweb    = Web logs only
 checkbox.updatedata = Actualitzaci\u00F3 de dades
 
 chk.offlinemode  = Mode Desconnectat
@@ -689,9 +690,9 @@ menu.update         = Update course
 menu.view           = View
 
 message.export_csv            = Exportaci\u00F3 CSV amb \u00E8xit. Revisi el fitxer del directori: 
-message.export_csv_desglossed = Exportaci\u00F3 CSV amb \u00E8xit. Revisi el fitxer del directori: 
+message.export_csv_desglossed = Exportaci\u00F3 CSV amb \u00E8xit. Revisi el fitxer: 
 message.export_csv_success    = Exportaci\u00F3 CSV amb \u00E8xit. Revisi els fitxers del directori: 
-message.export_png            = Exportaci\u00F3 PNG amb \u00E8xit. Revisi els fitxers del directori: 
+message.export_png            = Exportaci\u00F3 PNG amb \u00E8xit. Revisi els fitxers: 
 
 module.assign      = Assignaci\u00F3
 module.book        = Llibre
@@ -747,6 +748,7 @@ text.exportcsvdesglosed = Export breakdown CSV...
 text.exportpng          = Export PNG...
 text.fail               = Fail
 text.favorite           = Destacats
+text.filteredusers      = Filtered users
 text.future             = Future
 text.hours              = Hores
 text.inprogress         = In progress
@@ -766,7 +768,7 @@ text.seconds            = Segons
 text.sectionplaceholder = Portada
 text.see                = See 
 text.selectall          = Select/Deselect all
-text.selectedUsers      = Selected Users
+text.selectedUsers      = Selected users
 text.stats              = Estad\u00EDstiques
 text.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
 text.thankstitle        = Acknowledgments:
