--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -38,7 +38,7 @@ MEAN_DIFF.yAxisTitle = Logs
 
 RADAR = Radar
 
-SCATTER = Dispersion
+SCATTER = Scatter
 
 STACKED_BAR = Stacked Bar
 
@@ -96,6 +96,7 @@ chartlabel.tableMean      = Bedeuten
 chartlabel.thirdquartile  = Drittes Quartil
 chartlabel.upperlimit     = Obere Grenze
 
+checkbox.onlyweb    = Only origin web
 checkbox.updatedata = Daten aktualisieren
 
 chk.offlinemode  = Offline-Modus
@@ -747,6 +748,7 @@ text.exportcsvdesglosed = Export breakdown CSV...
 text.exportpng          = Export PNG...
 text.fail               = Fail
 text.favorite           = Als Favorit markiert
+text.filteredusers      = Filtered users
 text.future             = Future
 text.hours              = Std
 text.inprogress         = In progress
