--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -38,7 +38,7 @@ MEAN_DIFF.yAxisTitle = Logs
 
 RADAR = Radar
 
-SCATTER = Dispersion
+SCATTER = Scatter
 
 STACKED_BAR = Stacked Bar
 
@@ -96,6 +96,7 @@ chartlabel.tableMean      = Mean
 chartlabel.thirdquartile  = Third Quartile
 chartlabel.upperlimit     = Upper Limit
 
+checkbox.onlyweb    = Web logs only
 checkbox.updatedata = Update data
 
 chk.offlinemode  = Offline mode
@@ -688,10 +689,10 @@ menu.tools          = _Tools
 menu.update         = _Update course
 menu.view           = _View
 
-message.export_csv            = CSV export successfully. Review the filein the directory: 
-message.export_csv_desglossed = CSV breakdown export successfully. Review the filein the directory: 
+message.export_csv            = CSV export successfully. Review the file: 
+message.export_csv_desglossed = CSV breakdown export successfully. Review the file: 
 message.export_csv_success    = CSV export successfully. Review the files in the directory: 
-message.export_png            = PNG export successfully. Review the file in the directory: 
+message.export_png            = PNG export successfully. Review the file: 
 
 module.assign      = Assignment
 module.book        = Book
@@ -747,6 +748,7 @@ text.exportcsvdesglosed = Export breakdown CSV...
 text.exportpng          = Export PNG...
 text.fail               = Fail
 text.favorite           = Starred
+text.filteredusers      = Filtered users
 text.future             = Future
 text.hours              = Hours
 text.inprogress         = In progress
@@ -766,7 +768,7 @@ text.seconds            = Seconds
 text.sectionplaceholder = Front page
 text.see                = See 
 text.selectall          = Select/Deselect all
-text.selectedUsers      = Selected Users
+text.selectedUsers      = Selected users
 text.stats              = Statistics
 text.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
 text.thankstitle        = Acknowledgments:
