--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -38,7 +38,7 @@ MEAN_DIFF.yAxisTitle = Journaux
 
 RADAR = Radar
 
-SCATTER = Dispersion
+SCATTER = Scatter
 
 STACKED_BAR = Bar Empil\u00E9e
 
@@ -96,6 +96,7 @@ chartlabel.tableMean      = Signifier
 chartlabel.thirdquartile  = Troisi\u00E8me quartile
 chartlabel.upperlimit     = Limite sup\u00E9rieure
 
+checkbox.onlyweb    = Web logs only
 checkbox.updatedata = Mettre \u00E0 jour les donn\u00E9es
 
 chk.offlinemode  = Mode hors-ligne
@@ -689,7 +690,7 @@ menu.update         = Update course
 menu.view           = View
 
 message.export_csv            = Export CSV avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire: 
-message.export_csv_desglossed = Export CSV avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire: 
+message.export_csv_desglossed = Export CSV avec succ\u00E8s. Passez en revue les fichiers: 
 message.export_csv_success    = Export CSV avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire: 
 message.export_png            = Export PNG avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire: 
 
@@ -747,6 +748,7 @@ text.exportcsvdesglosed = Export breakdown CSV...
 text.exportpng          = Export PNG...
 text.fail               = Fail
 text.favorite           = Favoris\r\n
+text.filteredusers      = Filtered users
 text.future             = Future
 text.hours              = Heures
 text.inprogress         = In progress
@@ -766,7 +768,7 @@ text.seconds            = Secondes
 text.sectionplaceholder = Page de garde
 text.see                = See 
 text.selectall          = Select/Deselect all
-text.selectedUsers      = Selected Users
+text.selectedUsers      = Selected users
 text.stats              = Statistiques
 text.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
 text.thankstitle        = Acknowledgments:
