--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -38,7 +38,7 @@ MEAN_DIFF.yAxisTitle = Logs
 
 RADAR = Radar
 
-SCATTER = Dispersion
+SCATTER = Scatter
 
 STACKED_BAR = A Barre In Pila
 
@@ -96,6 +96,7 @@ chartlabel.tableMean      = Significare
 chartlabel.thirdquartile  = Terzo quartile
 chartlabel.upperlimit     = Limite superiore
 
+checkbox.onlyweb    = Web logs only
 checkbox.updatedata = Aggiorna i dati
 
 chk.offlinemode  = Modalit\u00E0 offline
@@ -689,7 +690,7 @@ menu.update         = Update course
 menu.view           = View
 
 message.export_csv            = Esportazione CSV con successo. Esaminare i file nella directory: 
-message.export_csv_desglossed = Esportazione CSV con successo. Esaminare i file nella directory: 
+message.export_csv_desglossed = Esportazione CSV con successo. Esaminare i file: 
 message.export_csv_success    = Esportazione CSV con successo. Esaminare i file nella directory: 
 message.export_png            = Esportazione PNG con successo. Esaminare i file nella directory: 
 
@@ -747,6 +748,7 @@ text.exportcsvdesglosed = Export breakdown CSV...
 text.exportpng          = Export PNG...
 text.fail               = Fail
 text.favorite           = Preferiti
+text.filteredusers      = Filtered users
 text.future             = Future
 text.hours              = Ore
 text.inprogress         = In progress
@@ -766,7 +768,7 @@ text.seconds            = secondi
 text.sectionplaceholder = Prima pagina
 text.see                = See 
 text.selectall          = Select/Deselect all
-text.selectedUsers      = Selected Users
+text.selectedUsers      = Selected users
 text.stats              = Statistiche
 text.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
 text.thankstitle        = Acknowledgments:
