--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -38,7 +38,7 @@ MEAN_DIFF.yAxisTitle = Hist\u00F3rico
 
 RADAR = Radar
 
-SCATTER = Dispersion
+SCATTER = Scatter
 
 STACKED_BAR = Bar Empilhados
 
@@ -96,6 +96,7 @@ chartlabel.tableMean      = Significar
 chartlabel.thirdquartile  = Terceiro quartil
 chartlabel.upperlimit     = Limite superior
 
+checkbox.onlyweb    = Web logs only
 checkbox.updatedata = Atualizar dados
 
 chk.offlinemode  = Modo offline
@@ -747,6 +748,7 @@ text.exportcsvdesglosed = Export breakdown CSV...
 text.exportpng          = Export PNG...
 text.fail               = Fail
 text.favorite           = Com estrela
+text.filteredusers      = Filtered users
 text.future             = Future
 text.hours              = Horas
 text.inprogress         = In progress
@@ -766,7 +768,7 @@ text.seconds            = Segundos
 text.sectionplaceholder = Primeira p\u00E1gina
 text.see                = See 
 text.selectall          = Select/Deselect all
-text.selectedUsers      = Selected Users
+text.selectedUsers      = Selected users
 text.stats              = Estat\u00EDsticas
 text.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
 text.thankstitle        = Acknowledgments:
