--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -96,6 +96,7 @@ chartlabel.tableMean      = Media
 chartlabel.thirdquartile  = Tercer Cuartil
 chartlabel.upperlimit     = Limite Superior
 
+checkbox.onlyweb    = Solo registros de web
 checkbox.updatedata = Actualizar datos
 
 chk.offlinemode  = Modo offline
@@ -688,10 +689,10 @@ menu.tools          = _Herramientas
 menu.update         = Actua_lizar curso
 menu.view           = _Ver
 
-message.export_csv            = Exportaci\u00F3n CSV con \u00E9xito. Revise el en el directorio: 
-message.export_csv_desglossed = Exportaci\u00F3n CSV desglosado con \u00E9xito. Revise el en el directorio: 
+message.export_csv            = Exportaci\u00F3n CSV con \u00E9xito. Revise el fichero: 
+message.export_csv_desglossed = Exportaci\u00F3n CSV desglosado con \u00E9xito. Revise el ficlero: 
 message.export_csv_success    = Exportaci\u00F3n CSV con \u00E9xito. Revise los ficheros en el directorio: 
-message.export_png            = Exportaci\u00F3n PNG con \u00E9xito. Revise el fichero en el directorio: 
+message.export_png            = Exportaci\u00F3n PNG con \u00E9xito. Revise el fichero: 
 
 module.assign      = Tarea
 module.book        = Libro
@@ -747,6 +748,7 @@ text.exportcsvdesglosed = Exportar CSV desglosado...
 text.exportpng          = Exportar PNG...
 text.fail               = Suspenso
 text.favorite           = Destacados
+text.filteredusers      = Usuarios filtrados
 text.future             = Futuros
 text.hours              = horas
 text.inprogress         = En progreso
@@ -766,7 +768,7 @@ text.seconds            = segundos
 text.sectionplaceholder = P\u00E1gina principal
 text.see                = Ver 
 text.selectall          = Seleccionar/Deseleccionar todos
-text.selectedUsers      = Usuarios Seleccionados
+text.selectedUsers      = Usuarios seleccionados
 text.stats              = Estad\u00EDsticas
 text.thanks             = Este trabajo ha sido posible gracias a las ayudas concedidas  por  la  Consejer\u00EDa  de  Educaci\u00F3n  de  la  Junta de Castilla y Le\u00F3n a la Universidad de Burgos (OL-2018-01) para el apoyo al desarrollo de la formaci\u00F3n on-line cofinanciadas por el Fondo Europeo de Desarrollo Regional (FEDER).
 text.thankstitle        = Agradecimientos:
