casting to int when export csv and 0, 1 and only filtered user for Total chart

--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -669,7 +669,7 @@ log.event.xls_grade_exported                                    = Calificaci\u00
 log.event.xml_grade_exported                                    = Calificaci\u00F3n XML exportada
 log.event.zip_archive_of_folder_downloaded                      = Directorio descargado en formato Zip
 
-menu.about          = _Acerca de la aplicaci\u00F3n
+menu.about          = A_cerca de la aplicaci\u00F3n
 menu.changeconfig   = Ca_mbiar configuraci\u00F3n
 menu.changesubject  = _Cambiar curso
 menu.clearselection = _Borrar selecci\u00F3n
@@ -678,7 +678,7 @@ menu.exit           = _Salir
 menu.exportconfig   = Ex_portar configuraci\u00F3n...
 menu.exportcsv      = E_xportar datos CSV...
 menu.file           = _Archivo
-menu.help           = _Ayuda
+menu.help           = A_yuda
 menu.importconfig   = _Importar configuraci\u00F3n...
 menu.logout         = _Cerrar sesi\u00F3n
 menu.moreinfo       = _M\u00E1s informaci\u00F3n
